исправление кода после 1 ревью

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -100,14 +99,16 @@
         <p class="section-subtitle">
           Для тех, кто любит прокрастинировать
         </p>
-        <div class="video__iframes">
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" width="515" height="316"
-             allowfullscreen>
-          </iframe>
-          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" width="515" height="316"
-             allowfullscreen>
-          </iframe>
-        </div>
+        <ul class="video__iframes">
+          <li class="video__list-item">
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen>
+            </iframe>
+          </li>
+          <li class="video__list-item">
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen>
+            </iframe>
+          </li>
+        </ul>
       </section>
 
       <section class="oakley">
@@ -185,7 +186,8 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по
+            всему
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
             смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
@@ -194,7 +196,7 @@
             <img src="./images/khan-book.jpg" alt="Весь мир - школа. Салман Хан" class="khan__book-pic">
             <a class="khan__buy-link" href="#">Купить книгу &#8594;</a>
           </div>
-        </вш>
+        </div>
       </section>
 
       <section class="kaufman">
